messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
      version: green 
  template:
    metadata:
      labels:
        app: django-app
        version: green
    spec:
      containers:
      - name: django
        image: nginx:alpine
        ports:
        - containerPort: 8000
