messaging_app/messaging_app/kubeservice.yaml
# this is the switcher to point traffic to specific version you change
apiVersion: v1 
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
    version: blue
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
